Regrouped; began move away from URL to URI